--- a/index.html
+++ b/index.html
@@ -1,12 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>Les Petits Plats</title>
+  </head>
+  <body>
+    <main>
+      <header class="text-center mt-5 mb-3">
+        <img
+          src="https://user.oc-static.com/upload/2020/08/14/15973932905401_logo%20%281%29.png"
+          alt="logo les petits plats"
+          class="headerLogo"
+        />
+      </header>
+      <section>
+        <div class="input-group">
+          <div class="form-floating">
+            <input
+              id="search-input"
+              type="search"
+              class="form-control"
+              placeholder="Rechercher une recette"
+            />
+            <label class="form-label" for="search-input"
+              >Rechercher une recette</label
+            >
+          </div>
+          <button id="search-button" type="button" class="btn btn-secondary">
+            <i class="fas fa-search"></i>
+          </button>
+        </div>
+      </section>
+      <section class="dropdownContainer">
+        <div class="dropdown">
+          <button class="btn btn-primary">
+            Ingredients <i class="fa-solid fa-angle-down"></i>
+          </button>
+          <div id="ingredientsDropdown" class="dropdown-content">
+            <div class="headerDropdown">
+              <input
+                type="search"
+                placeholder="Rechercher un ingrédient"
+                id="ingredientsInput"
+              />
+              <i class="fa-solid fa-angle-up closeDropdown"></i>
+            </div>
+            <ul id="ingredientList"></ul>
+          </div>
+        </div>
+        <div class="dropdown">
+          <button class="btn btn-success">
+            Appareils <i class="fa-solid fa-angle-down"></i>
+          </button>
+          <div id="appareilsDropdown" class="dropdown-content">
+            <div class="headerDropdown">
+              <input
+                type="search"
+                placeholder="Rechercher un appareil"
+                id="appareilsInput"
+              />
+              <i class="fa-solid fa-angle-up closeDropdown"></i>
+            </div>
+            <ul id="applianceList"></ul>
+          </div>
+        </div>
+        <div class="dropdown">
+          <button class="btn btn-danger">
+            Ustensiles <i class="fa-solid fa-angle-down"></i>
+          </button>
+          <div id="ustensilesDropdown" class="dropdown-content">
+            <div class="headerDropdown">
+              <input
+                type="search"
+                placeholder="Rechercher un ustensile"
+                id="ustensilesInput"
+              />
+              <i class="fa-solid fa-angle-up closeDropdown"></i>
+            </div>
+            <ul id="ustensilsList"></ul>
+          </div>
+        </div>
+      </section>
+      <section class="cardsContainer"></section>
+    </main>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
+      integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"
+      integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK"
+      crossorigin="anonymous"
+    ></script>
+    <script src="./js/api.js"></script>
+    <script src="./js/filter.js"></script>
+    <script src="./js/index.js"></script>
+  </body>
 </html>
