--- a/index.html
+++ b/index.html
@@ -37,19 +37,21 @@
               type="search"
               class="form-control"
               placeholder="Rechercher une recette"
+              autocomplete="off"
             />
             <label class="form-label" for="search-input"
               >Rechercher une recette</label
             >
+            <button id="search-button" type="button" tabindex="0">
+              <i class="fas fa-search"></i>
+            </button>
           </div>
-          <button id="search-button" type="button" class="btn btn-secondary">
-            <i class="fas fa-search"></i>
-          </button>
         </div>
       </section>
+      <section class="tags-container"></section>
       <section class="dropdownContainer">
         <div class="dropdown">
-          <button class="btn btn-primary">
+          <button class="btn bg-primary">
             Ingredients <i class="fa-solid fa-angle-down"></i>
           </button>
           <div id="ingredientsDropdown" class="dropdown-content">
@@ -65,7 +67,7 @@
           </div>
         </div>
         <div class="dropdown">
-          <button class="btn btn-success">
+          <button class="btn bg-success">
             Appareils <i class="fa-solid fa-angle-down"></i>
           </button>
           <div id="appareilsDropdown" class="dropdown-content">
@@ -81,7 +83,7 @@
           </div>
         </div>
         <div class="dropdown">
-          <button class="btn btn-danger">
+          <button class="btn bg-danger">
             Ustensiles <i class="fa-solid fa-angle-down"></i>
           </button>
           <div id="ustensilesDropdown" class="dropdown-content">
@@ -110,7 +112,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="./js/api.js"></script>
-    <script src="./js/filter.js"></script>
     <script src="./js/index.js"></script>
+    <script src="./js/filter.js"></script>
   </body>
 </html>
