feat: add logic method forEach

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                 type="search"
                 placeholder="Rechercher un ingrédient"
                 id="ingredientsInput"
+                autocomplete="off"
               />
               <i class="fa-solid fa-angle-up closeDropdown"></i>
             </div>
@@ -76,6 +77,7 @@
                 type="search"
                 placeholder="Rechercher un appareil"
                 id="appareilsInput"
+                autocomplete="off"
               />
               <i class="fa-solid fa-angle-up closeDropdown"></i>
             </div>
@@ -92,6 +94,7 @@
                 type="search"
                 placeholder="Rechercher un ustensile"
                 id="ustensilesInput"
+                autocomplete="off"
               />
               <i class="fa-solid fa-angle-up closeDropdown"></i>
             </div>
